# python-projects

./: .gitignore  README.md  pyproject.toml  report.csv
algorithms/: dijkstra.py  run_algo.sh  sliding_window.py  topo_sort.py  union_find.py
webscrape-reporter/: demo_report.json  pyproject.toml  report.txt  test_example.html
webscrape-reporter/src/webscrape_reporter/cli/: main.py
webscrape-reporter/src/webscrape_reporter/reports/: formatter.py  statistics.py
webscrape-reporter/src/webscrape_reporter/scraper/: fetcher.py  parser.py
webscrape-reporter/tests/: test_parser.py
