[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "webscrape-reporter"
version = "0.1.0"
description = "A CLI tool to scrape websites and generate reports"
authors = [{ name = "Calvin Lee", email = "clee421@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[project.scripts]
webscrape-report = "webscrape_reporter.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]